--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -21,8 +21,9 @@ jobs:
           echo "github.ref -> ${{ github.ref }}"
 
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
           java-version: '21'
 
       - name: Build with Maven
