--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build & push docker image
     runs-on: ubuntu-latest
     env:
-      IMG_NAME: ${{ env.IMAGE_NAME}}
+      IMG_NAME: ${{ vars.IMAGE_NAME }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
