--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -25,6 +25,9 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Print Maven version
+        run: mvn --version
+
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
