--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -24,10 +24,18 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+          maven: '3.8.8'
+
+      - name: Define MAVEN_HOME
+        run: |
+          export MAVEN_HOME=/usr/share/apache-maven-3.8.8
 
       - name: Print Maven version
         run: |
           printenv
+
+      
+          
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
