--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Define MAVEN_HOME
         run: |
           export MAVEN_HOME=/usr/share/apache-maven-3.8.8
+          echo MAVEN_HOME= $MAVEN_HOME
 
       - name: Print Maven version
         run: |
