--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -35,11 +35,8 @@ jobs:
         run: |
           printenv
 
-      
-          
-
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn clean package
 
       # Defines tags to be applied to the image, depending on the tag definitions, see: https://github.com/docker/metadata-action
       - name: Docker metadata
