--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
 
+      - name: Run app
+        run: java -jar ./target/com.dummy.examples-1.0-SNAPSHOT.jar
+
       # Defines tags to be applied to the image, depending on the tag definitions, see: https://github.com/docker/metadata-action
       - name: Docker metadata
         id: metadata
