--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Run app
         run: |
+          export MY_ENV_VAR=$(find /usr/share -maxdepth 1 -type d -name 'apache-maven-*' | head -n 1)
+          echo MY_ENV_VAR as value: $MY_ENV_VAR
           export MAVEN_HOME=/usr/share/apache-maven-3.8.8
           java -jar ./target/com.dummy.examples-1.0-SNAPSHOT.jar
 
