--- a/.github/workflows/maven_docker_build.yml
+++ b/.github/workflows/maven_docker_build.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           export MY_ENV_VAR=$(find ./ -maxdepth 1 -type d -name 'apache-maven-*' | head -n 1)
           echo MY_ENV_VAR as value: $MY_ENV_VAR
+          RAVEN_HOME=$(mvn --version | grep "Maven home" | awk '{print $3}')
+          echo RAVEN_HOME as value: $RAVEN_HOME
           export MAVEN_HOME=$(find /usr/share -maxdepth 1 -type d -name 'apache-maven-*' | head -n 1)
           java -jar ./target/com.dummy.examples-1.0-SNAPSHOT.jar
 
